# doc

./: .gitignore  README.md  ashe.md
BIOS/: 制作win pe.md  安装多系统到同一磁盘.md  装机.md
Singles/: DType_Tautorial.md  cmake-buildsystem.md
ashe/: ashe.md  ashe2.md  bind.md  buildqt.md  choco.md  clang-format.md  git.md  ssh.md
dev/GL/: multiplatform.md
dev/common/proj/cmake/test/: CMakeLists.txt  Makefile  test.3.cpp  test.cpp  tests
dev/common/proj/cmake/test/global_include/: global_include.h
dev/common/proj/cmake/test/include/: header.h
dev/common/proj/cmake/test/set_source_files_properties_include/: set_source_files_properties_include.h
dev/common/proj/cmake/test/set_target_properties_include/: set_target_properties_include.h
dev/design-pattern/: 0-this.md  1.singleleton.h  2.Factory.h  3.abstract_factory.h  4.template.h
dev/env/: launch.js.md  some libs.md
draft/: CLI.md
draft/Ashe/: ashe.md  bufix.md  buildqt.md  git.md  remote.md
issue/Plan/: 2023.md
issue/Tricks/: hexo_image_path_compatible_with_markdown_editor.md
issue/linux/: COMMAND.md  COMMAND.rare.md  Hugo + nginx + domain: this doc server.md  (+3 more)
linux/: COMMAND.md  COMMAND.rare.md  U18 install GCC11.md  autohotkey.md  network.md  v2rayL.md  vsftpd.md  处理wsl与windows的code冲突.md  编译qt6.4 与qtcreator.md
resource/: ashe.md
singles/: DType_Tautorial.md  build_ffmpeg_on_wsl.md  clang-debug.md  gdb.md  gimp_setup.md  hexo_image_path_compatible_with_markdown_editor.md  online-vscode.md  this_doc_server.md  ubuntu_install_docker.md  右键菜单.md
tools/: clang-format.md
vscode/: launch.js.md.bak.md
(+109 files in other folders)
